[gd_scene load_steps=11 format=3 uid="uid://c336w4a0j6wuj"]

[ext_resource type="Texture2D" uid="uid://c6hkh5wxbwnrh" path="res://textures/image.png" id="1_i11rg"]
[ext_resource type="Script" path="res://cells/cell.gd" id="1_jqjnq"]
[ext_resource type="Texture2D" uid="uid://qx002nk3j64m" path="res://textures/image2.png" id="2_6jt2o"]
[ext_resource type="Texture2D" uid="uid://cyv64cbnwhx1c" path="res://textures/normal_map.png" id="2_xbnjd"]
[ext_resource type="Texture2D" uid="uid://7mg13bm86bfh" path="res://textures/normal_map2.png" id="3_yy00g"]

[sub_resource type="PlaneMesh" id="PlaneMesh_m8w7l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cu50i"]
albedo_texture = ExtResource("2_6jt2o")
normal_enabled = true
normal_scale = 2.0
normal_texture = ExtResource("3_yy00g")
texture_filter = 0

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_vck0i"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cifiu"]
albedo_texture = ExtResource("1_i11rg")
normal_enabled = true
normal_scale = 0.3
normal_texture = ExtResource("2_xbnjd")
texture_filter = 0

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_odxqw"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[node name="Cell" type="Node3D"]
script = ExtResource("1_jqjnq")

[node name="floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_m8w7l")
surface_material_override/0 = SubResource("StandardMaterial3D_cu50i")

[node name="StaticBody3D" type="StaticBody3D" parent="floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_vck0i")

[node name="wall_l" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -1, 1, -1.13886e-22)
mesh = SubResource("PlaneMesh_m8w7l")
surface_material_override/0 = SubResource("StandardMaterial3D_cifiu")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_l"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_l/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_odxqw")

[node name="wall_r" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 1, 1, 0)
mesh = SubResource("PlaneMesh_m8w7l")
surface_material_override/0 = SubResource("StandardMaterial3D_cifiu")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_r"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_r/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_odxqw")

[node name="wall_d" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 1)
mesh = SubResource("PlaneMesh_m8w7l")
surface_material_override/0 = SubResource("StandardMaterial3D_cifiu")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_d"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_d/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_odxqw")

[node name="wall_u" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 1, -1)
mesh = SubResource("PlaneMesh_m8w7l")
surface_material_override/0 = SubResource("StandardMaterial3D_cifiu")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_u"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_u/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_odxqw")
